Title Text Wrap Fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -923,6 +923,9 @@ section .container {
 .main-timeline .timeline-content:after,.main-timeline .timeline:nth-child(2n) .timeline-content:after{left:65px}
 }
 
+.badge {
+  text-wrap: pretty;
+}
 
 /*--------------------------------------------------------------
 # Portfolio
